--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap');
 
 :root{
   --main-color: #C2FF83;
   --black-color: #000000;
   --white-color: #ffffff;
-
+  --font-figtree: "Figtree", sans-serif;
+  --font-sora: font-family: "Sora", sans-serif;
 }
 
-body{
-  font-family: 'Roboto';
-}
-/* ============================================================================================ */
-/* NAVBAR */
+/* Navbar */
 .image-fluid {
   max-width: 100%;
   height: auto;
@@ -19,11 +16,10 @@ body{
 }
 
 #navLinks a {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  text-decoration: none;
-  color: var(--black-color);
+font-family: var(--font-figtree);
+font-weight: 400;
+font-size: 14px;
+line-height: 21px;
   position: relative;
   transition: color 0.3s ease;
 }
@@ -34,8 +30,8 @@ body{
   bottom: -4px;
   left: 0;
   width: 0;
-  height: 2px;
-  background-color: var(--main-color);
+  height: 1px;
+  background-color: var(--black-color);
   transition: width 0.3s ease;
 }
 
@@ -46,5 +42,58 @@ body{
 #navLinks a.active {
   color: var(--main-color);
 }
+
+#nav-btn{
+font-weight: 600;
+font-size: 14px;
+line-height: 15.4px;
+}
+
+#menu{
+  display: none !important;
+}
+
+@media (max-width: 1550px) {
+  nav{
+    padding: 16px 180px !important;
+  }
+}
+
+@media (max-width: 1400px) {
+  nav{
+    padding: 16px 100px !important;
+  }
+}
+
+@media (max-width: 1200px) {
+  nav{
+    padding: 16px 60px !important;
+  }
+
+  #navLinks{
+    gap: calc(var(--spacing) * 12) !important;
+  }
+}
+
+
+@media (max-width: 1000px) {
+  #menu{
+    display: inherit !important;
+  }
+  #navLinks{
+    display: none !important;
+  }
+  nav {
+    padding: 16px 26px !important;
+}
+}
+
+@media (max-width: 430px) {
+  #nav-btn{
+    display: none !important;
+  }
+}
+
+
 
 /* ============================================================================================  */
