--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap');
 
-:root{
+:root {
   --main-color: #C2FF83;
   --black-color: #000000;
   --white-color: #ffffff;
@@ -16,10 +16,7 @@
 }
 
 #navLinks a {
-font-family: var(--font-figtree);
-font-weight: 400;
-font-size: 14px;
-line-height: 21px;
+  font-family: var(--font-figtree);
   position: relative;
   transition: color 0.3s ease;
 }
@@ -39,57 +36,49 @@ line-height: 21px;
   width: 100%;
 }
 
-#navLinks a.active {
-  color: var(--main-color);
-}
-
-#nav-btn{
-font-weight: 600;
-font-size: 14px;
-line-height: 15.4px;
-}
-
-#menu{
+#menu {
   display: none !important;
 }
 
 @media (max-width: 1550px) {
-  nav{
+  nav {
     padding: 16px 180px !important;
   }
 }
 
 @media (max-width: 1400px) {
-  nav{
+  nav {
     padding: 16px 100px !important;
   }
 }
 
 @media (max-width: 1200px) {
-  nav{
+  nav {
     padding: 16px 60px !important;
   }
 
-  #navLinks{
+  #navLinks {
     gap: calc(var(--spacing) * 12) !important;
   }
 }
 
 
 @media (max-width: 1000px) {
-  #menu{
+  #menu {
     display: inherit !important;
   }
-  #navLinks{
+
+  #navLinks {
     display: none !important;
   }
+
   nav {
     padding: 16px 26px !important;
-}
+  }
 }
 
 @media (max-width: 430px) {
-  #nav-btn{
+  #nav-btn {
     display: none !important;
   }
 }
@@ -97,3 +86,9 @@ line-height: 15.4px;
 
 
 /* ============================================================================================  */
+/* Button */
+#nav-btn {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 15.4px;
+}
