add dynamic button and icons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap');
 
+*{
+  box-sizing: border-box;
+}
+
 :root {
   --main-color: #C2FF83;
   --black-color: #000000;
