--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ img {
   width: 172px;
   height: 172px;
   transition: ease-in-out 0.6s;
-  margin-left: 39px;
+
   position: relative;
 }
 
@@ -178,7 +178,16 @@ img {
 }
 
 @media (max-width: 550px) {
-  figure{
+  .hero-1-figure{
     display: none;
   }
+}
+
+.hero-img figure img{
+  transition: ease-in-out 1s;
+}
+
+.hero-img figure:hover img{
+    transform: scale(1.02);
+  border-radius: 30px;
 }
