--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@
 img {
   max-width: 100%;
 }
+
+figure{
+  overflow: hidden;
+}
 /* ============================================================================================  */
 /* Button */
 #nav-btn {
@@ -58,6 +62,15 @@ img {
   color: var(--white-color);
 }
 
+
+#CommonBtn{
+  transition: all 0.8s ease-in-out;
+  min-width: 161px;
+  height: 48px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 15.4px;
+}
 
 @media (max-width: 768px) {
   #talk-btn {
