--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,19 +25,20 @@ figure {
   font-size: 14px;
   line-height: 15.4px;
 }
-
 #talk-btn {
   width: 172px;
   height: 172px;
   transition: ease-in-out 0.6s;
-
   position: relative;
+  z-index: 100;
+  background-color: var(--btn-bg);
+  color: var(--btn-color);
 }
 
 #talk-btn:hover {
   transform: translateY(4px);
-  background-color: var(--black-color) !important;
-  color: var(--white-color) !important;
+  background-color: var(--btn-hover-bg) !important;
+  color: var(--btn-hover-color) !important;
 }
 
 #talk-btn::before {
@@ -48,8 +49,7 @@ figure {
   width: 0%;
   position: absolute;
   content: "";
-
-  background-color: var(--black-color);
+  background-color: var(--btn-hover-bg);
   transition: 0.3s ease-out;
   border-radius: 100%;
 }
@@ -59,7 +59,7 @@ figure {
 }
 
 #talk-btn:hover span {
-  color: var(--white-color);
+  color: var(--btn-hovercolor);
 }
 
 #CommonBtn {
@@ -383,13 +383,13 @@ figure {
   line-height: 34px;
 }
 
-.projectDiv:hover .projectArrow{
+.projectDiv:hover .projectArrow {
   background: var(--main-color);
   border: 2px solid transparent;
 }
 
 @media (max-width: 1024px) {
-  .showcaseHeading{
+  .showcaseHeading {
     font-size: 26px;
   }
 }
