--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,7 +77,12 @@ figure {
     height: 140px;
   }
 }
-
+@media (max-width: 640px) {
+  #CommonBtn{
+    min-width: 131px;
+  height: 40px;
+  }
+}
 
 /* Navbar */
 
@@ -434,4 +439,16 @@ figure {
   .swiper-pagination-bullet{
     display: none;
   }
+}
+
+/* Blog card*/
+
+.BlogFigure img{
+  transition: 0.6s ease-in-out;
+  border-radius: 24px;
+}
+
+.BlogFigure img:hover {
+	transform: scale(1.02);
+	border-radius: 24px;
 }
