--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
   --font-figtree: "Figtree", sans-serif;
   --font-sora: "Sora", sans-serif;
 }
+
 img {
   max-width: 100%;
 }
@@ -18,6 +19,9 @@ img {
 figure {
   overflow: hidden;
 }
+
+
+/* ============================================================================================  */
 /* ============================================================================================  */
 /* Button */
 #nav-btn {
@@ -84,6 +88,8 @@ figure {
   }
 }
 
+/* ================================================ */
+/* ================================================ */
 /* Navbar */
 
 #navLinks a,
@@ -110,52 +116,20 @@ figure {
   width: 100%;
 }
 
-#menu {
-  display: none !important;
-}
 
-@media (max-width: 1550px) {
-  nav {
-    padding: 16px 180px !important;
-  }
-}
-
-@media (max-width: 1400px) {
-  nav {
-    padding: 16px 100px !important;
-  }
-}
-
-@media (max-width: 1200px) {
-  nav {
-    padding: 16px 60px !important;
-  }
-
-  #navLinks {
-    gap: calc(var(--spacing) * 12) !important;
-  }
-}
-
-@media (max-width: 1000px) {
-  #menu {
-    display: inherit !important;
-  }
-
+@media (max-width: 1024px) {
   #navLinks {
     display: none !important;
   }
-
-  nav {
-    padding: 16px 26px !important;
-  }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 480px) {
   #nav-btn {
     display: none !important;
   }
 }
-
+/* ================================================ */
+/* ================================================ */
 /* FOOTER */
 
 @media (max-width: 850px) {
@@ -171,6 +145,10 @@ figure {
     top: 60px;
   }
 }
+/* ================================================= */
+/* ================================================ */
+
+
 
 /* ========================================= HOME */
 
@@ -451,4 +429,42 @@ figure {
 .BlogFigure img:hover {
 	transform: scale(1.02);
 	border-radius: 24px;
+}
+
+/* newsletter */
+
+#newletterForm input{
+	position: relative;
+	font-size: 14px;
+	min-width: 533px;
+	height: 69px;
+	line-height: 20px;
+	font-weight: 400;
+	color: #aaa;
+	background-color: var(--white-color);
+	border-radius: 35px;
+	padding: 12px 15px 12px 35px;
+	margin-bottom: 21px;
+	width: 100%;
+	border: 1px solid transparent;
+	overflow: visible;
+	outline: none;
+}
+
+#newletterForm button{
+	font-size: 16px;
+	color: var(--white-color);
+	background-color: var(--black-color);
+	border-radius: 100%;
+	width: 55px;
+	height: 55px;
+	line-height: 55px;
+	border: none !important;
+	float: right;
+	position: absolute;
+	top: 7px;
+	right: 9px;
+	overflow: visible;
+	outline: none;
+	transition: all 0.6s ease-in-out;
 }
