--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,17 +24,10 @@ figure {
 /* ============================================================================================  */
 /* ============================================================================================  */
 /* Button */
-#nav-btn {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 15.4px;
-}
+
+/* Talk Button */
 #talk-btn {
-  width: 172px;
-  height: 172px;
   transition: ease-in-out 0.6s;
-  position: relative;
-  z-index: 100;
   background-color: var(--btn-bg);
   color: var(--btn-color);
 }
@@ -66,30 +59,23 @@ figure {
   color: var(--btn-hovercolor);
 }
 
+
+/* CommonBtn Like Learn More or Read More */
 #CommonBtn {
   transition: all 0.8s ease-in-out;
   min-width: 161px;
   height: 48px;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 15.4px;
 }
 
-@media (max-width: 768px) {
-  #talk-btn {
-    width: 140px;
-    height: 140px;
-  }
-}
 @media (max-width: 640px) {
   #CommonBtn{
     min-width: 131px;
-  height: 40px;
+    height: 40px;
   }
 }
 
-/* ================================================ */
-/* ================================================ */
+/* ============================================================================================  */
+/* ============================================================================================  */
 /* Navbar */
 
 #navLinks a,
@@ -128,8 +114,8 @@ figure {
     display: none !important;
   }
 }
-/* ================================================ */
-/* ================================================ */
+/* ============================================================================================  */
+/* ============================================================================================  */
 /* FOOTER */
 
 @media (max-width: 850px) {
@@ -145,12 +131,9 @@ figure {
     top: 60px;
   }
 }
-/* ================================================= */
-/* ================================================ */
-
-
-
-/* ========================================= HOME */
+/* ============================================================================================  */
+/* ============================================================================================  */
+/* Home Page */
 
 #expertDriven::before {
   position: absolute;
