--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,6 @@ figure {
   overflow: hidden;
 }
 
-
 /* ============================================================================================  */
 /* ============================================================================================  */
 /* Button */
@@ -59,7 +58,6 @@ figure {
   color: var(--btn-hovercolor);
 }
 
-
 /* CommonBtn Like Learn More or Read More */
 #CommonBtn {
   transition: all 0.8s ease-in-out;
@@ -68,7 +66,7 @@ figure {
 }
 
 @media (max-width: 640px) {
-  #CommonBtn{
+  #CommonBtn {
     min-width: 131px;
     height: 40px;
   }
@@ -102,7 +100,6 @@ figure {
   width: 100%;
 }
 
-
 @media (max-width: 1024px) {
   #navLinks {
     display: none !important;
@@ -130,6 +127,13 @@ figure {
     position: absolute;
     top: 60px;
   }
+
+  .home-hero {
+    display: grid;
+    place-items: center;
+    text-align: center;
+    gap: 20px;
+  }
 }
 /* ============================================================================================  */
 /* ============================================================================================  */
@@ -147,14 +151,6 @@ figure {
   margin: auto;
 }
 
-@media (max-width: 768px) {
-  .home-hero {
-    display: grid;
-    place-items: center;
-    text-align: center;
-    gap: 20px;
-  }
-}
 
 @media (max-width: 550px) {
   .hero-1-figure {
@@ -170,6 +166,8 @@ figure {
   transform: scale(1.02);
   border-radius: 30px;
 }
+/* ============================================================================================  */
+/* ============================================================================================  */
 
 /* service */
 
@@ -272,8 +270,11 @@ figure {
     grid-template-columns: 100%;
   }
 }
-/* ============================================ PAGES */
+/* ============================================================================================  */
+/* ============================================================================================  */
+/* Common all Pages */
 
+/* Common About */
 #AboutUs-text::before {
   position: absolute;
   content: "";
@@ -362,92 +363,95 @@ figure {
 }
 
 /* testimonial*/
-.testimonialImageHover{
-  overflow:visible !important;
+.testimonialImageHover {
+  overflow: visible !important;
 }
-.testimonialImageHover img{
+.testimonialImageHover img {
   transition: 0.6s ease-in-out;
 }
 
-.testimonialImageHover img:hover{
+.testimonialImageHover img:hover {
   transform: translateY(-10px);
 }
 
 /* sliders */
-.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
-	bottom: var(--swiper-pagination-bottom, 8px);
-	top: var(--swiper-pagination-top, auto);
-	left: 0px;
-	width: 100%;
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: var(--swiper-pagination-bottom, 8px);
+  top: var(--swiper-pagination-top, auto);
+  left: 0px;
+  width: 100%;
 }
 
 .swiper-pagination {
-	position: absolute;
-	text-align: right;
-	transition: 300ms opacity;
-	transform: translate3d(0, 0, 0);
-	z-index: 10;
+  position: absolute;
+  text-align: right;
+  transition: 300ms opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
 }
 
 .swiper-pagination-bullet {
-	background: var(--main-color);
+  background: var(--main-color);
   border-radius: 0px;
   width: 30px;
   height: 6px;
 }
 
 @media (max-width: 580px) {
-  .swiper-pagination-bullet{
+  .swiper-pagination-bullet {
     display: none;
   }
 }
 
 /* Blog card*/
 
-.BlogFigure img{
+.BlogFigure img {
   transition: 0.6s ease-in-out;
   border-radius: 24px;
 }
 
 .BlogFigure img:hover {
-	transform: scale(1.02);
-	border-radius: 24px;
+  transform: scale(1.02);
+  border-radius: 24px;
 }
 
 /* newsletter */
 
-#newletterForm input{
-	position: relative;
-	font-size: 14px;
-	min-width: 533px;
-	height: 69px;
-	line-height: 20px;
-	font-weight: 400;
-	color: #aaa;
-	background-color: var(--white-color);
-	border-radius: 35px;
-	padding: 12px 15px 12px 35px;
-	margin-bottom: 21px;
-	width: 100%;
-	border: 1px solid transparent;
-	overflow: visible;
-	outline: none;
+#newletterForm input {
+  position: relative;
+  font-size: 14px;
+  min-width: 533px;
+  height: 69px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #aaa;
+  background-color: var(--white-color);
+  border-radius: 35px;
+  padding: 12px 15px 12px 35px;
+  margin-bottom: 21px;
+  width: 100%;
+  border: 1px solid transparent;
+  overflow: visible;
+  outline: none;
 }
 
-#newletterForm button{
-	font-size: 16px;
-	color: var(--white-color);
-	background-color: var(--black-color);
-	border-radius: 100%;
-	width: 55px;
-	height: 55px;
-	line-height: 55px;
-	border: none !important;
-	float: right;
-	position: absolute;
-	top: 7px;
-	right: 9px;
-	overflow: visible;
-	outline: none;
-	transition: all 0.6s ease-in-out;
+#newletterForm button {
+  font-size: 16px;
+  color: var(--white-color);
+  background-color: var(--black-color);
+  border-radius: 100%;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  border: none !important;
+  float: right;
+  position: absolute;
+  top: 7px;
+  right: 9px;
+  overflow: visible;
+  outline: none;
+  transition: all 0.6s ease-in-out;
 }
