--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,6 +137,46 @@ figure {
 }
 /* ============================================================================================  */
 /* ============================================================================================  */
+/* Newsletter*/
+
+#newletterForm input {
+  position: relative;
+  font-size: 14px;
+  min-width: 533px;
+  height: 69px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #aaa;
+  background-color: var(--white-color);
+  border-radius: 35px;
+  padding: 12px 15px 12px 35px;
+  margin-bottom: 21px;
+  width: 100%;
+  border: 1px solid transparent;
+  overflow: visible;
+  outline: none;
+}
+
+#newletterForm button {
+  font-size: 16px;
+  color: var(--white-color);
+  background-color: var(--black-color);
+  border-radius: 100%;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  border: none !important;
+  float: right;
+  position: absolute;
+  top: 7px;
+  right: 9px;
+  overflow: visible;
+  outline: none;
+  transition: all 0.6s ease-in-out;
+}
+
+/* ============================================================================================  */
+/* ============================================================================================  */
 /* Home Page */
 
 #expertDriven::before {
@@ -165,9 +205,6 @@ figure {
   transform: scale(1.02);
   border-radius: 30px;
 }
-/* ============================================================================================  */
-/* ============================================================================================  */
-
 /* ============================================================================================  */
 /* ============================================================================================  */
 /* Common all Pages */
@@ -224,10 +261,9 @@ figure {
   border: 2px solid transparent;
 }
 
-
-
-
-/* testimonial*/
+/* ============================================================================================  */
+/* ============================================================================================  */
+/* Testimonial*/
 .testimonialImageHover {
   overflow: visible !important;
 }
@@ -239,81 +275,9 @@ figure {
   transform: translateY(-10px);
 }
 
-/* sliders */
-.swiper-pagination-fraction,
-.swiper-pagination-custom,
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal {
-  bottom: var(--swiper-pagination-bottom, 8px);
-  top: var(--swiper-pagination-top, auto);
-  left: 0px;
-  width: 100%;
-}
-
-.swiper-pagination {
-  position: absolute;
-  text-align: right;
-  transition: 300ms opacity;
-  transform: translate3d(0, 0, 0);
-  z-index: 10;
-}
-
-.swiper-pagination-bullet {
-  background: var(--main-color);
-  border-radius: 0px;
-  width: 30px;
-  height: 6px;
-}
-
-@media (max-width: 580px) {
-  .swiper-pagination-bullet {
-    display: none;
-  }
-}
-
-
-/* newsletter */
-
-#newletterForm input {
-  position: relative;
-  font-size: 14px;
-  min-width: 533px;
-  height: 69px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #aaa;
-  background-color: var(--white-color);
-  border-radius: 35px;
-  padding: 12px 15px 12px 35px;
-  margin-bottom: 21px;
-  width: 100%;
-  border: 1px solid transparent;
-  overflow: visible;
-  outline: none;
-}
-
-#newletterForm button {
-  font-size: 16px;
-  color: var(--white-color);
-  background-color: var(--black-color);
-  border-radius: 100%;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  border: none !important;
-  float: right;
-  position: absolute;
-  top: 7px;
-  right: 9px;
-  overflow: visible;
-  outline: none;
-  transition: all 0.6s ease-in-out;
-}
-
 /* ============================================================================================  */
 /* ============================================================================================  */
 /* Cards */
-
 
 /* Service Card*/
 
@@ -386,8 +350,6 @@ figure {
   }
 }
 
-
-
 /* Blog card*/
 .BlogFigure img {
   transition: 0.6s ease-in-out;
@@ -397,4 +359,38 @@ figure {
 .BlogFigure img:hover {
   transform: scale(1.02);
   border-radius: 24px;
+}
+
+/* ============================================================================================  */
+/* ============================================================================================  */
+/* Sliders*/
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: var(--swiper-pagination-bottom, 8px);
+  top: var(--swiper-pagination-top, auto);
+  left: 0px;
+  width: 100%;
+}
+
+.swiper-pagination {
+  position: absolute;
+  text-align: right;
+  transition: 300ms opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
+}
+
+.swiper-pagination-bullet {
+  background: var(--main-color);
+  border-radius: 0px;
+  width: 30px;
+  height: 6px;
+}
+
+@media (max-width: 580px) {
+  .swiper-pagination-bullet {
+    display: none;
+  }
 }
