--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -203,11 +203,17 @@ figure {
 }
 
 @media (max-width: 764px) {
+
+#About-Stats div span {
+  font-size: 50px;
+  line-height: 50px;
+}
   #About-Stats div p {
     font-size: 16px;
     line-height: 18px;
   }
 }
+
 
 /* Common Project */
 
