--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: var(--font-figtree);
 }
 
 :root {
@@ -17,7 +18,7 @@ img {
 }
 
 figure {
-  overflow: hidden;
+  overflow: hidden;  
 }
 
 /* ============================================================================================  */
@@ -100,7 +101,6 @@ figure {
   width: 100%;
 }
 
-
 @media (max-width: 480px) {
   #nav-btn {
     display: none !important;
@@ -133,7 +133,6 @@ figure {
 /* ============================================================================================  */
 /* ============================================================================================  */
 /* Newsletter*/
-
 
 #newletterForm button {
   transition: all 0.6s ease-in-out;
@@ -203,17 +202,15 @@ figure {
 }
 
 @media (max-width: 764px) {
-
-#About-Stats div span {
-  font-size: 50px;
-  line-height: 50px;
-}
+  #About-Stats div span {
+    font-size: 50px;
+    line-height: 50px;
+  }
   #About-Stats div p {
     font-size: 16px;
     line-height: 18px;
   }
 }
-
 
 /* Common Project */
 
@@ -363,4 +360,17 @@ figure {
   .swiper-pagination-bullet {
     display: none;
   }
+}
+
+/* ============================================================================================  */
+/* ============================================================================================  */
+/* Service Page */
+
+#serviceImg figure img {
+  transition: ease-in-out 1s;
+}
+
+#serviceImg figure:hover img {
+  transform: scale(1.02);
+  border-radius: 34px;
 }
