--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -381,5 +381,31 @@ figure {
 
 /* ================================================================================================ */
 
+.about-card{
+	padding: 46px 39px 42px;
+	transition: ease-in-out 0.6s;
+	/* border: 1px solid transparent; */
+}
+
+.about-card:hover{
+	/* border: 1px solid var(--black--color); */
+	transform: translateY(-4px);
+	box-shadow: 2px 3px 48px rgb(0 0 0 / 10%);
+}
 
 
+@media(max-width: 1280px){
+  .about-card{
+    padding: 36px 29px 32px;
+  }
+}
+
+
+.aboutFixedImg{
+	background-image: url(../assests/images/about-fixed-Img.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	height: 731px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
